--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
             { name: "Local Hot", lastname: "Dad", age: 38, imageSrc: "images/dad.jpg", chatIntro: "Hey hungry, I'm dad;)" },
             { name: "Shelly", lastname: "Tours", age: 28, imageSrc: "images/shelly.jpg", chatIntro: "Explore the hidden whispers of architecture with me, and let's craft a story where every detail is as tantalizing as the journey itself. Ready for a tour that's as exclusive as my content?" },
             { name: "Local Hot", lastname: "Vlad", age: 30, imageSrc: "images/vlad.jpg", chatIntro: "I won't bite, unless you want me to;)" },
+            { name: "Local Hot", lastname: "Divorced Dad", age: 46, imageSrc: "images/divorced.jpg", chatIntro: "They say wine gets better with age. Well, I'm like a fine wine post-divorce – I've matured, and I'm ready to share a toast to our future." },
+
         ];
 
         const icebreakers = [
